# stack-ide-atom

./: .gitignore  .gitmodules  README.md  circle.yml  circleci-docker-cache.sh  docker  docker-gulp  gulp  gulpfile.coffee  package.json  stack.yaml
haskell/: LICENSE  atom-stack-ide.cabal  link-sandboxes.sh  stack-ide-atom.cabal
haskell/app/: Main.hs
haskell/src/: GhcjsExtras.hs  Main.hs  NiceChildProcess.hs  StackIde.hs  StackIdeM.hs  StackIdePackage.hs  StackIdeProcess.hs  UpdateSkippingStackIdeProcess.hs
haskell/src/Atom/: Atom.hs  CommandRegistry.hs  CompositeDisposable.hs  Decoration.hs  Marker.hs  Package.hs  TextEditor.hs
haskell/src/GHCJS/: Utils.hs
haskell/src/Node/: ChildProcess.hs
haskell/test/: ChildProcessSpec.hs  NiceChildProcessSpec.hs  Spec.hs  StackIdeProcessSpec.hs  StackIdeSpec.hs  UpdateSkippingStackIdeProcessSpec.hs
haskell/test-data/just-stack-yaml/: stack.yaml
haskell/test-data/no-compile-errors/: no-source-errors.cabal  stack.yaml
haskell/test-data/one-source-error/: OneSourceError.hs  one-source-error.cabal
haskell/test-data/two-source-errors/: TwoSourceErrors.hs  stack.yaml  (+1 more)
keymaps/: atom-stack-ide.cson  stack-ide-atom.cson
lib/: atom-stack-ide-view.coffee  atom-stack-ide.coffee  stack-ide-atom-view.coffee  stack-ide-atom.coffee
lib/haskell/: module-end.js  module-start.js
menus/: atom-stack-ide.cson  stack-ide-atom.cson
spec/: atom-stack-ide-spec.coffee  atom-stack-ide-view-spec.coffee  stack-ide-atom-spec.coffee
styles/: atom-stack-ide.less  stack-ide-atom.less
tasks/: shrinkwrap-remove-resolved.js
