name:                no-source-errors
version:             0.1.0.0
author:              Callum Rogers
maintainer:          callumrogers@hotmail.co.uk
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010